--- a/.gitignore
+++ b/.gitignore
@@ -65,6 +65,7 @@ local.properties
 ## NetBeans
 ##############################
 nbproject/*
+nbproject/private/
 build/
 nbbuild/
 dist/
@@ -86,3 +87,4 @@ build.xml
 ##############################
 .DS_Store
 /EjercicioClaseGIT/nbproject/private/
+/EjercicioGITClase/nbproject/private/
